# SParser

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main  test  test.html
cmake/: CMakeLists.txt
include/: SXML.h
old/: SXML.cpp  SXML.h
src/: SDoc.cpp  SDoc.h  SParser.cpp  SParser.h  SPbase.cpp  SPbase.h  SPtools.cpp  SPtools.h  SXML.cpp  main.cpp  spxml.cpp  spxml.h
tests/: test.xml
tests/reader/: file_reader_test.cpp  string_reader_test.cpp  test.xml
tests/writer/: file_writer_test.cpp  file_writer_test2.cpp
